; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_t613.c_sd_querymenu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/gspca/extr_t613.c_sd_querymenu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i32 }
%struct.v4l2_querymenu = type { i32, i64, i64 }

@.str = private unnamed_addr constant [6 x i8] c"50 Hz\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"60 Hz\00", align 1
@effects_control = common dso_local global i32* null, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gspca_dev*, %struct.v4l2_querymenu*)* @sd_querymenu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sd_querymenu(%struct.gspca_dev* %0, %struct.v4l2_querymenu* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.gspca_dev*, align 8
  %5 = alloca %struct.v4l2_querymenu*, align 8
  store %struct.gspca_dev* %0, %struct.gspca_dev** %4, align 8
  store %struct.v4l2_querymenu* %1, %struct.v4l2_querymenu** %5, align 8
  %6 = load %struct.v4l2_querymenu*, %struct.v4l2_querymenu** %5, align 8
  %7 = getelementptr inbounds %struct.v4l2_querymenu, %struct.v4l2_querymenu* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  switch i32 %8, label %47 [
    i32 128, label %9
    i32 129, label %26
  ]

9:                                                ; preds = %2
  %10 = load %struct.v4l2_querymenu*, %struct.v4l2_querymenu** %5, align 8
  %11 = getelementptr inbounds %struct.v4l2_querymenu, %struct.v4l2_querymenu* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  switch i64 %12, label %25 [
    i64 1, label %13
    i64 2, label %19
  ]

13:                                               ; preds = %9
  %14 = load %struct.v4l2_querymenu*, %struct.v4l2_querymenu** %5, align 8
  %15 = getelementptr inbounds %struct.v4l2_querymenu, %struct.v4l2_querymenu* %14, i32 0, i32 2
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = call i32 @strcpy(i8* %17, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %50

19:                                               ; preds = %9
  %20 = load %struct.v4l2_querymenu*, %struct.v4l2_querymenu** %5, align 8
  %21 = getelementptr inbounds %struct.v4l2_querymenu, %struct.v4l2_querymenu* %20, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = inttoptr i64 %22 to i8*
  %24 = call i32 @strcpy(i8* %23, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %50

25:                                               ; preds = %9
  br label %47

26:                                               ; preds = %2
  %27 = load %struct.v4l2_querymenu*, %struct.v4l2_querymenu** %5, align 8
  %28 = getelementptr inbounds %struct.v4l2_querymenu, %struct.v4l2_querymenu* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = trunc i64 %29 to i32
  %31 = load i32*, i32** @effects_control, align 8
  %32 = call i32 @ARRAY_SIZE(i32* %31)
  %33 = icmp ult i32 %30, %32
  br i1 %33, label %34, label %46

34:                                               ; preds = %26
  %35 = load %struct.v4l2_querymenu*, %struct.v4l2_querymenu** %5, align 8
  %36 = getelementptr inbounds %struct.v4l2_querymenu, %struct.v4l2_querymenu* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = inttoptr i64 %37 to i8*
  %39 = load i32*, i32** @effects_control, align 8
  %40 = load %struct.v4l2_querymenu*, %struct.v4l2_querymenu** %5, align 8
  %41 = getelementptr inbounds %struct.v4l2_querymenu, %struct.v4l2_querymenu* %40, i32 0, i32 1
  %42 = load i64, i64* %41, align 8
  %43 = getelementptr inbounds i32, i32* %39, i64 %42
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @strncpy(i8* %38, i32 %44, i32 8)
  store i32 0, i32* %3, align 4
  br label %50

46:                                               ; preds = %26
  br label %47

47:                                               ; preds = %2, %46, %25
  %48 = load i32, i32* @EINVAL, align 4
  %49 = sub nsw i32 0, %48
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %47, %34, %19, %13
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @strncpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
